--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,4 +1,4 @@
-* xref:ROOT:index.adoc[Allgemein]
+* xref:ROOT:index.adoc[Introduction]
 * xref:ROOT:java-spring-boot.adoc[BE Java / Spring Boot]
 * xref:ROOT:be-docker-plain.adoc[BE Docker Plain]
 * xref:ROOT:be-node-express.adoc[BE Node Express]
