updated documentation for quickstarters and slaves

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,3 +1,4 @@
+.Project Quickstarters
 * xref:ROOT:index.adoc[Introduction]
 * xref:ROOT:java-spring-boot.adoc[BE Java / Spring Boot]
 * xref:ROOT:be-docker-plain.adoc[BE Docker Plain]
@@ -11,4 +12,5 @@
 * xref:ROOT:e2e-cypress.adoc[Cypress E2E testing Quickstarters]
 * xref:ROOT:jupyter-notebook.adoc[Jupyter Notebook]
 * xref:ROOT:rshiny-app.adoc[RShiny app]
+* xref:ROOT:airflow.adoc[Airflow]
 
